# charging-binding-rs

./: Cargo.toml  README.md
afb-binding/: Cargo.toml
afb-binding/etc/: binder-chmgr.json  binding-am62x.json  binding-chmgr.json  binding-slac.json  binding-test.sh  build.rs  start-binder.sh
afb-binding/src/: binding.rs  libso.rs  types.rs  verbs.rs
afb-types/src/: auth-types.rs  chmgr-types.rs  chmgt-types.rs  libso.rs  ocpp-types.rs  slac-types.rs
chmgr-lib/: Cargo.toml
chmgr-lib/src/: libso.rs  manager.rs
chmgr-lib/test/i2c/: i2c-access.c  i2c-access.h
